// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success delete cateogory 1`] = `
"<h4 class=\\"page-header\\"> Categories
  <!--0-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"crud-page\\">
    <!--0-->
    <!--0-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new category form</button>
      <!--1-->
    </div>
    <div class=\\"container\\">
      <div class=\\"items-list\\">
        <div class=\\"panel\\">
          <table>
            <thead>
              <tr>
                <th>ID</th>
                <th>Name</th>
                <th>Slug</th>
                <th></th>
              </tr>
            </thead>
            <tbody>
              <tr class=\\"\\">
                <td class=\\"text-center\\">1</td>
                <td>Hello world!</td>
                <td>hello-world</td>
                <td class=\\"actions\\">
                  <button data-test-update-button=\\"1\\"> Edit </button>
                  <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                </td>
              </tr>
              <tr class=\\"\\">
                <td class=\\"text-center\\">6</td>
                <td>Название категории</td>
                <td>nazvanie-kategorii</td>
                <td class=\\"actions\\">
                  <button data-test-update-button=\\"6\\"> Edit </button>
                  <button class=\\"btn-danger\\" data-test-delete-button=\\"6\\"> Delete </button>
                </td>
              </tr>
            </tbody>
          </table>
          <!--0-->
          <!--0-->
          <!--0-->
          <div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
            <!--0-->
            <div class=\\"modal-content\\">
              <div class=\\"container\\">
                <h4>Delete category</h4>
                <p class=\\"content\\">Are you sure you want to delete category \\"Hello world!\\"?</p>
                <div class=\\"footer\\">
                  <button data-test-ok-button=\\"\\" class=\\"btn-danger\\">Ok</button>
                  <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
                </div>
              </div>
            </div>
          </div>
          <!--0-->
          <!--1-->
        </div>
      </div>
      <!--2-->
    </div>
  </div>
  <!--1-->
</div>
<!--0-->
<!--0-->
<!--0-->
<!--0-->"
`;

exports[`success delete cateogory 2`] = `
"<h4 class=\\"page-header\\"> Categories
  <!--0-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"crud-page\\">
    <!--0-->
    <!--0-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new category form</button>
      <!--1-->
    </div>
    <div class=\\"container\\">
      <div class=\\"items-list\\">
        <div class=\\"panel\\">
          <table>
            <thead>
              <tr>
                <th>ID</th>
                <th>Name</th>
                <th>Slug</th>
                <th></th>
              </tr>
            </thead>
            <tbody>
              <tr class=\\"\\">
                <td class=\\"text-center\\">6</td>
                <td>Название категории</td>
                <td>nazvanie-kategorii</td>
                <td class=\\"actions\\">
                  <button data-test-update-button=\\"6\\"> Edit </button>
                  <button class=\\"btn-danger\\" data-test-delete-button=\\"6\\"> Delete </button>
                </td>
              </tr>
            </tbody>
          </table>
          <!--0-->
          <!--0-->
          <!--0-->
          <!--1-->
        </div>
      </div>
      <!--2-->
    </div>
  </div>
  <!--1-->
</div>
<!--0-->
<!--0-->
<!--0-->
<!--0-->"
`;
